Added ingredient list and sized picture correctly

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,7 +1,34 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title> Lasagna</title>
+    </head>
+    <body>
 <h1>Lasagna</h1>
-<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8051637.jpg&q=85" alt="A delicious lasagna">
+<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8051637.jpg&q=85"
+width="400"
+height="500"
+
+alt="A delicious lasagna">
+
 <h2>A beautiful lasagna fresh from the oven</h2>
 <p>A wondferful, and with a few tricks relativley simple dish. It brings lots of flavor and versatility
     to the table if you arent too concenrend with keeping it authentic</p>
     <p>With plenty of hearty meat sauce and mozarella cheese this easy italian favorite is sure to please. With only a few hours in the oven
         youll be enjoying the best thing you've had all week </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1LB ground beef</li>
+            <li>1LB sausage</ls>
+            <ls>Two 16oz cans of tomato</li>
+            <li>Two cups beef broth</li>
+            <li>Four Cloves of Garlic</li>
+            <li> One small white onion</li>
+            <li> One Package of Lasagna noodles</li>
+            <li>One bay leaf</li>
+            <li>Itialian Seasoning to taste</li>
+            <li>salt and pepper to taste</li>
+        </ul>
+    </body>
+</html>
