updated index with baked-potato-soup link added ingredients to baked-potato-soup.html

--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Comfort Food Recipes</title>
     </head>
 <body>
-<h1>Odin Recipes</h1>
-<a href="recipes/lasagna.html">Recipes</a>
+<h1>Comfort Food Recipes</h1>
+<ul>
+<ul> 
+    <li> <a href="recipes/lasagna.html">Lasagna</a> </li>
+    <li> <a href="recipes/baked-potato-soup.html">Baked Potato Soup</a> </li>
 
-
-
-
+</ul>
 
 
 
