--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,11 +6,7 @@
     </head>
     <body>
 <h1>Lasagna</h1>
-<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8051637.jpg&q=85"
-width="400"
-height="500"
-
-alt="A delicious lasagna">
+<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8051637.jpg&q=85" width="400" height="500" alt="A delicious lasagna">
 
 <h2>A beautiful lasagna fresh from the oven</h2>
 <p>A wondferful, and with a few tricks relativley simple dish. It brings lots of flavor and versatility
@@ -22,13 +18,34 @@ alt="A delicious lasagna">
             <li>1LB ground beef</li>
             <li>1LB sausage</ls>
             <ls>Two 16oz cans of tomato</li>
-            <li>Two cups beef broth</li>
-            <li>Four Cloves of Garlic</li>
-            <li> One small white onion</li>
-            <li> One Package of Lasagna noodles</li>
-            <li>One bay leaf</li>
+            <li>2 cups beef broth</li>
+            <li>4 Cloves of Garlic(minced) </li>
+            <li>1 small white onion(diced) </li>
+            <li>1 Package of Lasagna noodles</li>
+            <li>2LB Mozerella cheese </li>
+            <li>16oz of Ricotta</li>
+            <li>1 table spoon of tomato paste</li>
+            <li>1 bay leaf</li>
             <li>Itialian Seasoning to taste</li>
             <li>salt and pepper to taste</li>
+            <ls>Olive oil</ls>
         </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>Cook onions untill they start to become translucent</li>
+            <li>Add a small amount of olive oil to middle of your pan and add your garlic, cook until fragrant</li>
+            <li>Brown ground beef and sausage until it is mostly cooked through</li>
+            <li>Season with salt and pepper</li>
+            <li>Add tomatos and tomato paste as well as italian seasoning bring to a simmer</li>
+            <li>Add beef broth and the bay leaf and return to a simmer for 45 minutes</li>
+            <li>when your sauce is done(remember to remove the bay leaf!) start by spooning a small amount into your baking dish</li>
+            <li>Begin assembling your ingredients in the dish, noodles first then a layer of sauce followed by a layer of ricotta</li>
+            <li>Once you reach the top of the pan its time to add your cheese, as much as youd like</li>
+            <li>Place in the oven at 425 degrees for 30 minutes. Dont worry about the noodles they will cook perfectly, the secret is the extra beef broth we added to our sauce! </li>
+            <li>Remove from the oven and check to make sure your noodles are done! (for extra crispy cheese place under your broiler for a minute or two) </li>
+            
+
+       
+        </ol>
     </body>
 </html>
