added cheesecake.html to index added new file, cheesecake.html

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     </head>
 <body>
 <h1>Comfort Food Recipes</h1>
-<ul>
+<img src="https://cdn.shopify.com/s/files/1/0948/8848/products/IMG_0043_1024x1024.JPG?v=1557261651" width="400" heigh="400" alt="a picture of a cartoon pie and pot">
 <ul> 
     <li> <a href="recipes/lasagna.html">Lasagna</a> </li>
     <li> <a href="recipes/baked-potato-soup.html">Baked Potato Soup</a> </li>
-
+    <li> <a href="recipes/cheesecake.html">No Bake Cheesecake</a> </li>
 </ul>
 
 
