--- a/recipes/baked-potato-soup.html
+++ b/recipes/baked-potato-soup.html
@@ -26,6 +26,12 @@
         <li>1 teaspoon salt</li>
         <li> 1 teaspoon fresh ground black pepper</li>
     </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Place bacon in a large, deep skillet. Cook over medium heat until browned. Drain, crumble, and set aside.</li>
+        <li>In a stock pot or Dutch oven, melt the margarine over medium heat. Whisk in flour until smooth. Gradually stir in milk, whisking constantly until thickened. Stir in potatoes and onions. Bring to a boil, stirring frequently.</li>
+        <li>Reduce heat, and simmer 10 minutes. Mix in bacon, cheese, sour cream, salt, and pepper. Continue cooking, stirring frequently, until cheese is melted.</li>
+    </ol>
 
 
 
